#animated-dialog のスタイルを修正

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@ button {
 }
 
 .dialog[id='animated-dialog'][aria-hidden='true'] {
-  display: block;
+  display: flex;
   pointer-events: none;
   visibility: hidden;
   opacity: 0;
