--- a/src/styles.css
+++ b/src/styles.css
@@ -82,8 +82,12 @@ button:not(:disabled):not([aria-disabled='true']) {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+/**
+ * 1. Fix dialog scrolling issue in Firefox
+ */
 .dialog__element {
-  /* - */
+  position: relative; /* 1 */
+  z-index: 0; /* 1 */
 }
 
 .dialog__document {
