--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,7 @@ button:not(:disabled):not([aria-disabled='true']) {
   display: flex;
   flex-direction: column; /* for IE11 */
   overflow: auto;
+  contain: strict;
 }
 
 .dialog[aria-hidden='true'] {
@@ -104,6 +105,7 @@ button:not(:disabled):not([aria-disabled='true']) {
   z-index: 100;
   overflow: auto;
   background-color: #f5f3f2;
+  contain: strict;
 }
 
 .full-screen-dialog[aria-hidden='true'] {
