--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
-* {
-  padding: 0;
-  margin: 0;
+html {
+  font-family: serif;
 }
 
-html {
+body {
   padding: 25px;
-  font-family: serif;
 }
 
 button {
@@ -39,6 +37,7 @@ p {
   z-index: 100;
   display: flex;
   flex-direction: column; /* for IE11 */
+  padding: 30px;
   overflow: auto;
 }
 
@@ -58,25 +57,6 @@ p {
   transition: visibility 0s 0.3s, opacity 0.3s;
 }
 
-/**
- * This extra element is required for scrolling to work correctly in Firefox and IE11 when there is padding
- */
-.dialog__inner {
-  position: relative;
-  z-index: 0;
-  flex-shrink: 0; /* for IE11 */
-  width: 100%;
-  padding: 30px;
-  margin: auto;
-}
-
-@media (min-width: 48em) {
-  .dialog__inner {
-    box-sizing: content-box;
-    width: 860px;
-  }
-}
-
 .dialog__backdrop {
   position: fixed;
   top: 0;
@@ -87,18 +67,19 @@ p {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-/**
- * 1. Fix dialog scrolling issue in Firefox
- */
-.dialog__element {
-  position: relative; /* 1 */
-  z-index: 0; /* 1 */
-}
-
 .dialog__document {
+  flex-shrink: 0;
+  width: 100%;
   padding: 30px;
+  margin: auto;
   background-color: #fff;
   border-radius: 25px;
+}
+
+@media (min-width: 48em) {
+  .dialog__document {
+    width: 860px;
+  }
 }
 
 .full-screen-dialog {
@@ -116,11 +97,6 @@ p {
   display: none;
 }
 
-.full-screen-dialog__element {
-  height: 100%;
-}
-
 .full-screen-dialog__document {
-  min-height: 100%;
   padding: 30px;
 }
