リファクタリング

--- a/src/index.css
+++ b/src/index.css
@@ -45,11 +45,11 @@ p {
   display: none;
 }
 
-.dialog[id='animated-dialog'] {
+.dialog--animated {
   transition: opacity 0.3s;
 }
 
-.dialog[id='animated-dialog'][aria-hidden='true'] {
+.dialog--animated[aria-hidden='true'] {
   display: flex;
   pointer-events: none;
   visibility: hidden;
@@ -76,12 +76,12 @@ p {
   border-radius: 25px;
 }
 
-.dialog[id='animated-dialog'] .dialog__document {
+.dialog--animated .dialog__document {
   transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   will-change: transform;
 }
 
-.dialog[id='animated-dialog'][aria-hidden='true'] .dialog__document {
+.dialog--animated[aria-hidden='true'] .dialog__document {
   transform: scale(0.85);
 }
 
