Revert ""Animated Dialog" のスタイルから `visibility` とそのトランジションを削除"
This reverts commit a0909e82307324edae05e068fd8b55daacbb2d47.

ダイアログのコンテンツがページ内検索にヒットしないようにするため。

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,9 @@ p {
 .dialog--animated[aria-hidden='true'] {
   display: flex; /* overrides the default style above */
   pointer-events: none;
+  visibility: hidden;
   opacity: 0;
+  transition: visibility 0s 0.3s, opacity 0.3s;
 }
 
 .dialog__backdrop {
