--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ p {
 	bottom: 0;
 	left: 0;
 	z-index: -1;
-	background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgb(0 0 0 / 0.3);
 }
 
 .dialog__document {
