--- a/src/index.css
+++ b/src/index.css
@@ -26,10 +26,7 @@ p {
 
 .dialog {
 	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	inset: 0;
 	z-index: 100;
 	display: flex;
 	padding: 30px;
@@ -54,10 +51,7 @@ p {
 
 .dialog__backdrop {
 	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	inset: 0;
 	z-index: -1;
 	background-color: rgb(0 0 0 / 0.3);
 }
