--- a/src/index.css
+++ b/src/index.css
@@ -82,10 +82,7 @@ p {
 
 .full-screen-dialog {
 	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	inset: 0;
 	z-index: 100;
 	overflow: auto;
 	background-color: #f5f3f2;
